--- a/views/task4.ejs
+++ b/views/task4.ejs
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Zadanie 4</title>
+    <title>Zadanie</title>
     <!-- Jeśli w poprzednich widokach używasz Bootstrapa -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
