--- a/views/register.ejs
+++ b/views/register.ejs
@@ -91,6 +91,26 @@
                 <label for="uczelnia" class="form-label">Uczelnia</label>
                 <input type="text" class="form-control" id="uczelnia" name="uczelnia" placeholder="Podaj nazwę uczelni (jeśli dotyczy)">
             </div>
+            
+            <!-- Rodzaj zawodu-->
+            <div class="mb-3" id="rodzaj-zawodu-container">
+                <label for="rodzaj_zawodu" class="form-label">Zawód</label>
+                <select class="form-select" id="rodzaj_zawodu" name="rodzaj_zawodu">
+                    <option value="" disabled selected>Wybierz profil swojego zawodu</option>
+                    <option value="1">Praca biurowa i administracja</option>
+                    <option value="2">Handel i obsługa klienta</option>
+                    <option value="3">Praca w sektorze IT</option>
+                    <option value="4">Budownictwo i prace fizyczne</option>
+                    <option value="5">Służba zdrowia</option>
+                    <option value="6">Transport i logistyka</option>
+                    <option value="7">Edukacja i nauka</option>
+                    <option value="8">Gastronomia i hotelarstwo</option>
+                    <option value="9">Nie podejmująca/ pracy zarobkowej</option>
+                </select>
+            </div>
+
+
+
 
             <!-- Przycisk Zarejestruj -->
             <div class="d-grid">
