--- a/views/register.ejs
+++ b/views/register.ejs
@@ -95,7 +95,7 @@
             <!-- Rodzaj zawodu-->
             <div class="mb-3" id="rodzaj-zawodu-container">
                 <label for="rodzaj_zawodu" class="form-label">Zawód</label>
-                <select class="form-select" id="rodzaj_zawodu" name="rodzaj_zawodu">
+                <select class="form-select" id="rodzaj_zawodu" name="rodzaj_zawodu" required>
                     <option value="" disabled selected>Wybierz profil swojego zawodu</option>
                     <option value="1">Praca biurowa i administracja</option>
                     <option value="2">Handel i obsługa klienta</option>
