--- a/views/intro_nudging1.ejs
+++ b/views/intro_nudging1.ejs
@@ -62,7 +62,11 @@
     </div>
 
     <script>
-       
+        window.onpageshow = function(event) {
+        if (event.persisted) {
+        // Wymuś przeładowanie z serwera
+        location.reload();
+        }}; 
        // Nasłuchiwanie zdarzenia cofnięcia w przeglądarce
        window.onpopstate = function () {
         const userChoice = confirm("Czy na pewno chcesz opuścić tę stronę?");
