--- a/views/intro_nudging2.ejs
+++ b/views/intro_nudging2.ejs
@@ -61,7 +61,13 @@
     </div>
 
     <script>
-        
+
+        window.onpageshow = function(event) {
+        if (event.persisted) {
+        // Wymuś przeładowanie z serwera
+        location.reload();
+        }}; 
+
         // Nasłuchiwanie zdarzenia cofnięcia w przeglądarce
         window.onpopstate = function () {
         const userChoice = confirm("Czy na pewno chcesz opuścić tę stronę?");
