--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -112,6 +112,7 @@
 </body>
 </html>
 <script>
+    const timeoutInput = document.getElementById('timeout');
     window.onpageshow = function(event) {
         if (event.persisted) { // Jeśli strona wraca z pamięci podręcznej bfcache
             window.location.reload(); // Wymusza ponowne załadowanie GET /task1
@@ -131,7 +132,7 @@
             if (progress >= 100) {
                 progress = 100;
                 clearInterval(timer);
-
+                timeoutInput.value = 'true';
                 // Automatyczne wysyłanie formularza po zakończeniu paska
                 document.getElementById('task7-form').submit();
             }
