--- a/views/nudging1.ejs
+++ b/views/nudging1.ejs
@@ -116,7 +116,7 @@
          // Pobranie wartości czasu wylosowanego w backendzie
         const taskDuration = <%= wylosowanyCzas %> * 1000; // Przeliczamy na milisekundy
         const progressBar = document.getElementById('progress-bar');
-        const form = document.getElementById('task2-form');
+        const form = document.getElementById('nudging1-form');
         const timeoutInput = document.getElementById('timeout');
 
         function startProgressBar(duration) {
