--- a/views/nudging1.ejs
+++ b/views/nudging1.ejs
@@ -93,7 +93,7 @@
             <button type="submit" name="choice" value="stay" class="btn btn-prefered">
                 Tak, chcę się wylogować
             </button>
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="nudging1Token" value="<%= nudging1Token %>">
             <input type="hidden" name="timeout" id="timeout" value="false"> 
             <!-- Opcja alternatywna -->
             <button type="submit" name="choice" value="cancel" class="btn btn-alternative">
