--- a/views/nudging2.ejs
+++ b/views/nudging2.ejs
@@ -109,7 +109,7 @@
                     </div>
                 </button>
                 <input type="hidden" name="timeout" id="timeout" value="false">
-                <input type="hidden" name="taskToken" value="<%= taskToken %>">
+                <input type="hidden" name="nudging2Token" value="<%= nudging2Token %>">
             </div>
         </form>
         <!-- Pasek ładowania -->
