--- a/views/nudging3.ejs
+++ b/views/nudging3.ejs
@@ -96,7 +96,7 @@
                         Anuluj operację<br><small>Cofnij do aplikacji</small>
                     </button>
                 </div>
-                <input type="hidden" name="taskToken" value="<%= taskToken %>">
+                <input type="hidden" name="nudging3Token" value="<%= nudging3Token %>">
                 <input type="hidden" name="timeout" id="timeout" value="false">
             </form>
             <div class="progress">
