--- a/views/task1.ejs
+++ b/views/task1.ejs
@@ -106,7 +106,7 @@
                 Idź do koszyka<br><small>Zapłać za zamówienie</small>
               </button>
             </div>
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="task1Token" value="<%= task1Token %>">
             <input type="hidden" name="timeout" id="timeout" value="false">
           </form>
           <div class="progress">
