--- a/views/task2.ejs
+++ b/views/task2.ejs
@@ -102,7 +102,7 @@
             <button type="submit" name="choice" value="stay" class="btn btn-prefered">
                 Nie, chcę pozostać subskrybentem
             </button>
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="task2Token" value="<%= task2Token %>">
             <input type="hidden" name="timeout" id="timeout" value="false"> 
             <button type="submit" name="choice" value="cancel" class="btn btn-alternative">
                 Tak, chcę anulować
