--- a/views/task3.ejs
+++ b/views/task3.ejs
@@ -122,7 +122,7 @@
                     </div>
                 </button>
                 <input type="hidden" name="timeout" id="timeout" value="false">
-                <input type="hidden" name="taskToken" value="<%= taskToken %>">
+                <input type="hidden" name="task3Token" value="<%= task3Token %>">
             </div>
         </form>
         <div class="progress">
