--- a/views/task4.ejs
+++ b/views/task4.ejs
@@ -114,7 +114,7 @@
             </table>
             <button type="submit" class="submit-btn">Zarejestruj się</button>
             <input type="hidden" name="timeout" id="timeout" value="false">
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="task4Token" value="<%= task4Token %>">
         </form>
 
         <!-- Pasek postępu -->
