--- a/views/task6.ejs
+++ b/views/task6.ejs
@@ -103,7 +103,8 @@
            
             <button type="submit" class="btn btn-primary">Przejdź do zakupu</button>
             <input type="hidden" name="timeout" id="timeout" value="false">
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="task6Token" value="<%= task6Token %>">
+
         </form>
         
         <div class="progress">
