--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -98,7 +98,7 @@
 
             <button type="submit" class="submit-btn">Przejdź do zakupu</button>
             <input type="hidden" name="timeout" id="timeout" value="false">
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="task7Token" value="<%= task7Token %>">
         </form>
          <!-- Pasek postępu -->
          <div class="progress">
