--- a/views/task8.ejs
+++ b/views/task8.ejs
@@ -111,7 +111,7 @@
 
             <button type="submit" class="submit-btn">Przejdź do zakupu</button>
             <input type="hidden" name="timeout" id="timeout" value="false">
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="task8Token" value="<%= task8Token %>">
         </form>
 
         <div class="progress">
