--- a/views/task5.ejs
+++ b/views/task5.ejs
@@ -105,7 +105,7 @@
                 </tr>
             </table>
             <button type="submit" class="submit-btn">Zarejestruj się</button>
-            <input type="hidden" name="taskToken" value="<%= taskToken %>">
+            <input type="hidden" name="task5Token" value="<%= task5Token %>">
             <input type="hidden" name="timeout" id="timeout" value="false">
         </form>
         <div class="progress">
