--- a/views/task1.ejs
+++ b/views/task1.ejs
@@ -42,7 +42,7 @@
             width: 300px;
             height: 100px;
             font-size: 20px;
-            margin-left: 10px; /* Odstęp między przyciskami */
+            margin-right: 10px; /* Odstęp między przyciskami */
         }
 
 
@@ -98,13 +98,15 @@
             <img src="/pizza.png" alt="pizza" width="100" height="100" class="pizza-icon">
           <h1 class="mb-4">Wybierz najkorzystniejszą dla siebie opcję</h1>
           <form action="/task1" method="POST" id="task1-form">
+          
             <div class="button-container">
-              <button type="submit" name="choice" value="green" class="btn btn-green">
+                <button type="submit" name="choice" value="red" class="btn btn-red">
+                    Idź do koszyka<br><small>Zapłać za zamówienie</small>
+                  </button>
+              
+                <button type="submit" name="choice" value="green" class="btn btn-green">
                 Dodaj ser<br><small>Opcja 10zł droższa</small>
-              </button>
-              <button type="submit" name="choice" value="red" class="btn btn-red">
-                Idź do koszyka<br><small>Zapłać za zamówienie</small>
-              </button>
+              </button> 
             </div>
             <input type="hidden" name="task1Token" value="<%= task1Token %>">
             <input type="hidden" name="timeout" id="timeout" value="false">
